# wall_following_pid_robot

./: README.md
gazebo_ros_pkgs/gazebo_plugins/src/: gazebo_ros_camera_utils.cpp  gazebo_ros_depth_camera.cpp  gazebo_ros_openni_kinect.cpp  gazebo_ros_p3d.cpp  gazebo_ros_prosilica.cpp
gazebo_ros_pkgs/gazebo_ros/: CMakeLists.txt
gazebo_ros_pkgs/gazebo_ros/launch/: empty_world.launch
husky/husky_control/config/: control.yaml  localization.yaml
husky/husky_control/launch/: control.launch
husky/husky_description/urdf/: husky.urdf.xacro
husky/husky_ur5_moveit_config/: package.xml
husky_simulator/husky_gazebo/launch/: husky_empty_world.launch  spawn_husky.launch
husky_simulator/husky_gazebo/urdf/: husky.gazebo.xacro  (+1 more)
interactive_marker_twist_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
interactive_marker_twist_server/config/: aerial.yaml  linear.yaml
interactive_marker_twist_server/launch/: interactive_markers.launch
interactive_marker_twist_server/src/: marker_server.cpp
twist_mux/src/: twist_mux.cpp
wall_following_assignment/: CMakeLists.txt  package.xml  setup.py
wall_following_assignment/cfg/: Follower.cfg
wall_following_assignment/description/: Assig1.odt
wall_following_assignment/launch/: control.launch  gazebo_world.launch  husky_follower.launch  spawn_husky.launch  teleop.launch  wall_follower_cpp.launch  wall_follower_python.launch
wall_following_assignment/python/: f.py  ground_truth_tf_publisher.py  m.py  o.py  wall_follower.py
wall_following_assignment/resources/: comp417.rviz  control.yaml  holonomic_simulator.yaml  localization.yaml  localization_3d.yaml  teleop.yaml
wall_following_assignment/src/: wall_follower_node.cpp
wall_following_assignment/urdf/: description.gazebo.xacro  husky.urdf.xacro
wall_following_assignment/worlds/: test_city_mod.world  walls_one_sided.world  walls_two_sided.world  walls_two_sided_tight.world
(+3 files in other folders)
