<?xml version="1.0"?>
<package>
  <name>interactive_marker_twist_server</name>
  <version>1.1.0</version>
  <description>Interactive control for generic Twist-based robots using interactive markers</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros-visualization/interactive_marker_twist_server</url>
  <url type="bugtracker">https://github.com/ros-visualization/interactive_marker_twist_server/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>interactive_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
